--- a/FlowersShop/Views/Commodities/Index.cshtml
+++ b/FlowersShop/Views/Commodities/Index.cshtml
@@ -6,10 +6,10 @@
 
 
 <div style="width: 100%; text-align: center; margin-bottom: 25px; margin-top: 8em;">
-    <a class="btn btn-md btn-default" href="@Url.Action("Bouquets", "Commodities")">Bouquets</a>
-    <a class="btn btn-md btn-default" href="@Url.Action("Baskets", "Commodities")">Baskets</a>
-    <a class="btn btn-md btn-default" href="@Url.Action("MonoBouquets", "Commodities")">Mono Bouquets</a>
-    <a class="btn btn-md btn-default" href="@Url.Action("Compositions", "Commodities")">Compositions</a>
+    <a class="btn btn-md btn-default" href="@Url.Action("GetBouquets", "Commodities")">Bouquets</a>
+    <a class="btn btn-md btn-default" href="@Url.Action("GetBaskets", "Commodities")">Baskets</a>
+    <a class="btn btn-md btn-default" href="@Url.Action("GetMonoBouquets", "Commodities")">Mono Bouquets</a>
+    <a class="btn btn-md btn-default" href="@Url.Action("GetCompositions", "Commodities")">Compositions</a>
     <a class="btn btn-md btn-info" href="@Url.Action("Index", "DreamBouquet")">Create your own dream bouquet</a>
 </div>
 <h2 style="padding-top:25px;">Our super prepositions</h2>
@@ -82,7 +82,7 @@
                 @Html.DisplayFor(modelItem => item.Preferences)
             </td>
             <td>
-                <a href="Orders/Create/@item.id_Commodities">Buy</a>
+                <a href="@Url.Action("Create", "Orders", new { id = item.id_Commodities })">Buy</a>
                 @Html.ActionLink("Details", "Details", new { id = item.id_Commodities })
             </td>
         </tr>
