--- a/FlowersShop/Views/Shared/_Layout.cshtml
+++ b/FlowersShop/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     </header>
         <div class="container">
             <div class="jumbotron" style="background-color: #efecdb; padding-top:15px; height: 13em">
-                <p style="text-align:right; font-size:0.8em;"><a href="#" class="glyphicon glyphicon-shopping-cart">Cart</a></p>
+                <p style="text-align:right; font-size:0.8em;"><a href="@Url.Action("Index","Orders")" class="glyphicon glyphicon-shopping-cart">Cart</a></p>
                 <h1>@Html.ActionLink("Flowering", "Index", "Commodities")</h1>
                 <p class="lead">Welcome to our shop!</p>                 
             </div>
