--- a/FlowersShop.WEB/Views/Shared/_Layout.cshtml
+++ b/FlowersShop.WEB/Views/Shared/_Layout.cshtml
@@ -27,8 +27,13 @@
             </div>
         </div>
     </div>
+
     <div class="container body-content">
-        @RenderBody()
+        <div class="col-xs-8">
+            @RenderBody()
+        </div>
+    </div>
+    <div>
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
