Fix categories and commodities joining from db

--- a/FlowersShop.WEB/Views/Commodities/Index.cshtml
+++ b/FlowersShop.WEB/Views/Commodities/Index.cshtml
@@ -9,10 +9,11 @@
 <h2>Index</h2>
 
 <div style="width: 100%; text-align: center; margin-bottom: 25px; margin-top: 8em;">
-    <a class="btn btn-md btn-default" href="@Url.Action("GetBouquets", "Commodities")">Bouquets</a>
-    <a class="btn btn-md btn-default" href="@Url.Action("GetBaskets", "Commodities")">Baskets</a>
-    <a class="btn btn-md btn-default" href="@Url.Action("GetMonoBouquets", "Commodities")">Mono Bouquets</a>
-    <a class="btn btn-md btn-default" href="@Url.Action("GetCompositions", "Commodities")">Compositions</a>
+    <a class="btn btn-md btn-default" href="@Url.Action("GetBouquets", "CommoditiesByCategory")">Bouquets</a>
+    <a class="btn btn-md btn-default" href="@Url.Action("GetBaskets", "CommoditiesByCategory")">Baskets</a>
+    <a class="btn btn-md btn-default" href="@Url.Action("GetMonoBouquets", "CommoditiesByCategory")">Mono Bouquets</a>
+    <a class="btn btn-md btn-default" href="@Url.Action("GetCompositions", "CommoditiesByCategory")">Compositions</a>
+    <a class="btn btn-md btn-default" href="@Url.Action("GetDreamBouquet", "CommoditiesByCategory")">Create own bouquet</a>
 </div>
 
 <table class="table">
