--- a/FlowersShop.WEB/Views/Home/About.cshtml
+++ b/FlowersShop.WEB/Views/Home/About.cshtml
@@ -13,3 +13,7 @@
     That is why we always go the extra mile to make your floral gift perfect.
     We are Dnipro local florist!
 </p>
+
+<div>
+    @Html.ActionLink("Back to Home", "Index", "Commodities")
+</div>
