--- a/FlowersShop.WEB/Views/Home/Delivering.cshtml
+++ b/FlowersShop.WEB/Views/Home/Delivering.cshtml
@@ -7,3 +7,6 @@
 <h3>We are sorry :(</h3>
 <p>This page is curently is in development</p> 
 
+<div>
+    @Html.ActionLink("Back to Home", "Index", "Commodities")
+</div>
