--- a/FlowersShop.WEB/Views/Home/Services.cshtml
+++ b/FlowersShop.WEB/Views/Home/Services.cshtml
@@ -28,3 +28,7 @@
     detraxit assentior in sea. Nam inani scribentur cu, persius
     ceteros ex eum. Eam choro dolor assueverit ei.
 </p>
+
+<div>
+    @Html.ActionLink("Back to Home", "Index", "Commodities")
+</div>
