--- a/FlowersShop.WEB/Views/Order/Buy.cshtml
+++ b/FlowersShop.WEB/Views/Order/Buy.cshtml
@@ -1,9 +1,7 @@
 ﻿@model IEnumerable<FlowersShop.WEB.Models.OrderViewModel>
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Buying";
 }
 
-<h2>Create</h2>
-
-
+<h2>Buying</h2>
