--- a/FlowersShop.WEB/Views/Home/Delivering.cshtml
+++ b/FlowersShop.WEB/Views/Home/Delivering.cshtml
@@ -1,11 +1,32 @@
-﻿@model IEnumerable<FlowersShop.WEB.Models.CityViewModel> 
+﻿@model IEnumerable<FlowersShop.BLL.DTO.CityDTO> 
 @{
     ViewBag.Title = "Delivering";
 }
 
 <h2>Delivering by cities</h2>
-<h3>We are sorry :(</h3>
-<p>This page is curently is in development</p> 
+
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(modelItem => modelItem.Title)
+        </th>
+        <th>
+            @Html.DisplayNameFor(modelItem => modelItem.Price)
+        </th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(model => item.Price)
+            </td>
+        </tr>
+    }
+</table>
 
 <div>
     @Html.ActionLink("Back to Home", "Index", "Commodities")
