Fix Delivering page

--- a/FlowersShop.WEB/Views/Home/Delivering.cshtml
+++ b/FlowersShop.WEB/Views/Home/Delivering.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<FlowersShop.BLL.DTO.CityDTO> 
+﻿@model IEnumerable<FlowersShop.WEB.Models.CityViewModel> 
 @{
     ViewBag.Title = "Delivering";
 }
