--- a/FlowersShop.WEB/Views/Commodities/Details.cshtml
+++ b/FlowersShop.WEB/Views/Commodities/Details.cshtml
@@ -14,7 +14,7 @@
             @Html.DisplayNameFor(model => model.image)
         </dt>
         <dd>
-            <img style="height: 50px; width: 50px;" src="@Html.DisplayFor(model => model.image)" />
+            <img style="height: 150px;" src="@Html.DisplayFor(model => model.image)" />
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Title)
