--- a/FlowersShop.WEB/Views/Commodities/Index.cshtml
+++ b/FlowersShop.WEB/Views/Commodities/Index.cshtml
@@ -3,10 +3,10 @@
 @model CommoditiesFilter
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Home";
 }
 
-<h2>Index</h2>
+
 
 <div style="width: 100%; text-align: center; margin-bottom: 25px; margin-top: 8em;">
     <a class="btn btn-md btn-default" href="@Url.Action("GetBouquets", "CommoditiesByCategory")">Bouquets</a>
@@ -16,14 +16,17 @@
     <a class="btn btn-md btn-default" href="@Url.Action("GetDreamBouquet", "CommoditiesByCategory")">Create own bouquet</a>
 </div>
 
+<h2 style="padding-top:25px;">Our super prepositions</h2>
+<hr />
 <div class="container" style="margin-top: 40px; margin-bottom:25px;">
     <div class="row">
         @using (Html.BeginForm("Index", "Commodities", FormMethod.Get))
         {
-            <div class="col-lg-4" style="width: 13%; padding-left: 4%">
+            <div class="col-lg-1">Colour:</div>
+            <div class="col-lg-2" style="width: 13%; padding-left: 4%">                                        
                 @Html.DropDownList("selectedColour", new SelectList(new string[] { "All", "Mixed", "Pink", "White", "Yellow", "Blue", "Red" }))
-            </div>
-            <div class="col-lg-4">
+            </div>            
+            <div class="col-lg-9">
                 <input class="btn-lg btn-xs" type="submit" value="apply" />
             </div>
         }
@@ -47,6 +50,7 @@
         <th>
             Price
         </th>
+        <th></th>
         <th></th>
     </tr>
 
