--- a/FlowersShop.WEB/Views/CommoditiesByCategory/GetCompositions.cshtml
+++ b/FlowersShop.WEB/Views/CommoditiesByCategory/GetCompositions.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<FlowersShop.BLL.DTO.CommoditiesByCategoryDTO>
 
 @{
-    ViewBag.Title = "GetCompositions";
+    ViewBag.Title = "Compositions";
 }
 
-<h2>GetCompositions</h2>
+<h2>Compositions</h2>
 
 <table class="table">
     <tr>
@@ -40,10 +40,10 @@
                 @Html.DisplayFor(model => item.CommodityDTO.Price)
             </td>
             <td>
-                <a href="@Url.Action("Create", "Orders", new { id = item.CommodityDTO.id_Commodities })">Buy</a>
+                <a href="@Url.Action("Details", "Commodities", new { id = item.CommodityDTO.id_Commodities })">Details</a>
             </td>
             <td>
-                <a href="@Url.Action("Details", "Commodities", new { id = item.CommodityDTO.id_Commodities })">Details</a>
+                <a href="@Url.Action("Buy", "Order", new { id = item.CommodityDTO.id_Commodities })">Buy</a>
             </td>
         </tr>
     }
