--- a/FlowersShop.WEB/Views/Commodities/Details.cshtml
+++ b/FlowersShop.WEB/Views/Commodities/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model FlowersShop.BLL.DTO.CommodityDTO
+﻿@model FlowersShop.WEB.Models.Commodities.CommodityRefererViewModel
 @{
     ViewBag.Title = "Details";
 }
@@ -9,51 +9,14 @@
 <div>
     <h4>Commodities</h4>
     <hr />
+    @Html.HiddenFor(model => model.Model.Id)    
+    
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.image)
+            Name
         </dt>
         <dd>
-            <img style="height: 150px;" src="@Html.DisplayFor(model => model.image)" />
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Colour)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Colour)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Preferences)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Preferences)
+            <img style="height: 150px" alt="commodity" src="@Model.Model.ImagePath" />
         </dd>
     </dl>
 </div>
