UI made more user friendly

--- a/FlowersShop.WEB/Views/Home/About.cshtml
+++ b/FlowersShop.WEB/Views/Home/About.cshtml
@@ -1,11 +1,12 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About us";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+
+<h2>@ViewBag.Message</h2>
+
 
 <p>
-    Flowering Flower Shop proudly serves the Dnipro area.
+    Flower Shop proudly serves the Dnipro area.
     We are family owned and operated. We are committed to offering only
     the finest floral arrangements and gifts, backed by service that is
     friendly and prompt. Because all of our customers are important,
@@ -13,6 +14,7 @@
     That is why we always go the extra mile to make your floral gift perfect.
     We are Dnipro local florist!
 </p>
+
 
 <div>
     @Html.ActionLink("Back to Home", "Index", "Commodities")
