--- a/FlowersShop.WEB/Content/Site.css
+++ b/FlowersShop.WEB/Content/Site.css
@@ -1,24 +1,4 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
-
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
-
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+﻿body, html {
+    height: 100%;
+    background: url(../Content/Images/Themes/flower_background_pattern.png) 0 0 repeat;
 }
