--- a/FlowersShop.WEB/Views/Commodities/Index.cshtml
+++ b/FlowersShop.WEB/Views/Commodities/Index.cshtml
@@ -4,40 +4,37 @@
     ViewBag.Title = Resources.CommoditiesView.CommoditiesIndexTitle;
 }
 
-<div style="width: 100%; text-align: center; margin-bottom: 25px; margin-top: 8em;">
-    <a class="btn btn-md btn-default" href="@Url.Action("GetBouquets", "CommoditiesByCategory")">Bouquets</a>
-    <a class="btn btn-md btn-default" href="@Url.Action("GetBaskets", "CommoditiesByCategory")">Baskets</a>
-    <a class="btn btn-md btn-default" href="@Url.Action("GetMonoBouquets", "CommoditiesByCategory")">Mono Bouquets</a>
-    <a class="btn btn-md btn-default" href="@Url.Action("GetCompositions", "CommoditiesByCategory")">Compositions</a>
-    <a class="btn btn-md btn-default" href="@Url.Action("GetDreamBouquet", "CommoditiesByCategory")">Create own bouquet</a>
+<!-- Carousel -->
+@Html.Partial("../Navigation/Carousel")
+
+<div style="margin-top: 7em;">     
+    @using (@Html.BeginForm("Index"))
+    {
+        @Html.Label(Resources.CommoditiesView.SearchTitle)
+        @Html.TextBox("textToSearch", Model.Model.TextToSearch)
+    }
 </div>
 
-<hr />
-<div class="container" style="margin-top: 40px; margin-bottom:25px;">
-    <div class="row">
-        <div>
-            @using (@Html.BeginForm("Index"))
-            {
-                @Html.Label(Resources.CommoditiesView.SearchTitle)
-                @Html.TextBox("textToSearch", Model.Model.TextToSearch)
-            }
-        </div>            
-    </div>
-</div>
-
-<table class="table">
+<h2>Our Super Prepositions</h2> 
+         
+<div style="display: flex; flex-wrap: wrap; margin-top: 5em;">
     @foreach (var item in Model.Model.List)
-     {
-        <tr>
-            <td>
-                @Html.ActionLink(item.Name, "Details", new { id = item.Id, returnUrl = Model.Referer }, new { @class = "commodity" })                
-                <img style="width: 90px; height: 120px" src="@item.ImagePath" alt="commodity" class="commodityImg">
-                @Html.ActionLink(item.Price.ToString(CultureInfo.InvariantCulture), "Details", new { id = item.Id, returnUrl = Model.Referer }, new { @class = "commodityPrice" })
-                <button class="btn-success" href="@Url.Action("Buy", "Order", new { id = item.Id })">Buy</button>
-            </td>
-        </tr>
-     }
-</table>
+    {
+        <div class="thumbnail" style="width: 17em;">                
+            <img style="width: 123px; height: 150px" src="@item.ImagePath" alt="commodity" class="img-responsive">
+            <div class="caption">
+                <h4 class="pull-right price">
+                    @Html.ActionLink(item.Price.ToString(CultureInfo.InvariantCulture)+" UAH", "Details", new { id = item.Id, returnUrl = Model.Referer })
+                </h4>
+                <h4 class="title">
+                    @Html.ActionLink(item.Name, "Details", new { id = item.Id, returnUrl = Model.Referer }, new { @class = "title" })
+                </h4>
+                <button class="btn-sm btn-info pull-right" href="@Url.Action("Buy", "Order", new {id = item.Id})">Buy</button>
+            </div>                           
+        </div>
+    }
+</div>
+
 @{
     int firstPage = 1;
     int secondPage = 2;
@@ -49,14 +46,14 @@
     
     @if (Model.Model.PageNumber != firstPage && Model.Model.List.Count != 0)
     {
-        <li class="active">
+        <li>
             @Html.ActionLink(firstPage.ToString(), "Index", new {page = (firstPage), textToSearch = Model.Model.TextToSearch})
         </li>
     }
 
     @if (pageBefore > firstPage && Model.Model.List.Count != 0)
     {
-        <li class="active">
+        <li>
             @if (pageBefore > secondPage)
             {
                 <b>...</b>
@@ -67,7 +64,7 @@
 
     @if (Model.Model.List.Count != 0)
     {
-        <li class="active">
+        <li>
             <a href="#">@Model.Model.PageNumber</a>
         </li>
     }
