--- a/FlowersShop.WEB/Views/Shared/_Layout.cshtml
+++ b/FlowersShop.WEB/Views/Shared/_Layout.cshtml
@@ -39,8 +39,8 @@
                     <div class="col-md-5">
                         <div id="footer-social">
                             <ul class="social">
-                                <li><a href="https://www.facebook.com/"><img src="../../Content/Images/Socials/footer_fb_icon.png" alt="fb"></a></li>
-                                <li><a href="https://twitter.com/"><img src="../../Content/Images/Socials/footer_twitter_icon.png" alt="tw"></a></li>
+                                <li><a href="https://www.facebook.com/"><img src="~/Content/Images/Socials/footer_fb_icon.png" alt="fb"></a></li>
+                                <li><a href="https://twitter.com/"><img src="~/Content/Images/Socials/footer_twitter_icon.png" alt="tw"></a></li>
                             </ul>
                         </div>
                     </div>
