--- a/FlowersShop.WEB/Content/Site.css
+++ b/FlowersShop.WEB/Content/Site.css
@@ -1,4 +1,8 @@
 ﻿body, html {
     height: 100%;
-    background: url(../Content/Images/Themes/flower_background_pattern.png) 0 0 repeat;
+    /*background: url(../Content/Images/Themes/flower_background_pattern.png) 0 0 repeat;*/
+}
+
+.navigation-wrapper {
+    width: 70%;
 }
